nginx-nlp/nginx-nlp-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-nlp
  namespace: nlp
spec:
  ports:
  - port: 80
  selector:
    app: nginx-nlp
  type: ClusterIP
