nginx-nlp/nginx-nlp.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nlp
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-nlp
  namespace: nlp
spec:
  ports:
  - port: 80
  selector:
    app: nginx-nlp
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-nlp-np
  namespace: nlp
spec:
  ports:
  - port: 80
  selector:
    app: nginx-nlp
  type: NodePort
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: nginx-nlp
  namespace: nlp
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: nginx-nlp
    spec:
      tolerations:
      - key: "node.kubernetes.io/unreachable"
        operator: "Exists"
        effect: "NoExecute"
        tolerationSeconds: 2
      - key: "node.kubernetes.io/not-ready"
        operator: "Exists"
        effect: "NoExecute"
        tolerationSeconds: 2
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - nginx-nlp
              topologyKey: kubernetes.io/hostname
      containers:
      - name: nginx-nlp
        image: javisol/nginx-nlp:1.0
        #imagePullPolicy: Always
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 80
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 15
          timeoutSeconds: 1
          periodSeconds: 3
        readinessProbe:
          failureThreshold: 10
          httpGet:
            path: /
            port: 80
            scheme: HTTP
          initialDelaySeconds: 10
          timeoutSeconds: 1
          periodSeconds: 5 
          successThreshold: 1
      terminationGracePeriodSeconds: 10
