nginx-nlp/nginx-nlp-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-nlp
  namespace: nlp
spec:
  rules:
  - host: nginx.nlp
    http:
      paths:
      - backend:
          serviceName: nginx-nlp
          servicePort: 80
